--- a/Mine/build.gradle
+++ b/Mine/build.gradle
@@ -15,6 +15,7 @@ android {
     buildToolsVersion "30.0.3"
     buildFeatures {
         viewBinding = true
+        compose true
     }
     defaultConfig {
         applicationId "com.comm.util"
@@ -46,6 +47,17 @@ android {
     testOptions {
         unitTests.includeAndroidResources = true
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.1'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 
 }
 
@@ -54,6 +66,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
+
+    implementation platform('androidx.compose:compose-bom:2023.08.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
     androidTestImplementation 'androidx.test:core:1.5.0'
     androidTestImplementation 'androidx.test:runner:1.6.0-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:' + rootProject.espressoVersion
@@ -76,6 +96,10 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation 'com.jakewharton:butterknife:10.1.0'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
     kapt 'com.jakewharton:butterknife-compiler:10.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -91,8 +115,6 @@ dependencies {
     kapt 'com.alibaba:arouter-compiler:1.5.2'
     implementation project(path: ':androidUtil')
 
-    implementation 'com.google.dagger:dagger:2.44'
-    kapt 'com.google.dagger:dagger-compiler:2.44'
 
 
 }
