--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
 
 
     // For Robolectric tests.
