--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -155,13 +155,18 @@
         <activity android:name=".tool.screenshot.ScreenShortActivity" />
         <activity android:name=".permission.PermissionActivity" />
         <activity
-            android:name=".tool.location.GpsActivity"
+            android:name=".compose.ComposeActivity03"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".tool.location.GpsActivity"
+            android:exported="true">
+
         </activity>
         <activity android:name=".tool.image.ImageHandleActivity" />
         <activity
