--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,10 +62,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
 
 
     // For Robolectric tests.
     testImplementation("com.google.dagger:hilt-android-testing:2.44")
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     // ...with Kotlin.
     kaptTest("com.google.dagger:hilt-android-compiler:2.44")
