--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.kot">
 
     <uses-feature
@@ -28,12 +29,23 @@
         android:maxSdkVersion="32" /> <!-- Devices running Android 13 (API level 33) or higher -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-
-
+    <!--
     <queries>
         <package android:name="com.google.android.apps.maps" />
-    </queries>
+        <package android:name="com.google.android.youtube" />
+        <package android:name="com.autonavi.minimap" />
 
+        <package android:name="com.baidu.BaiduMap" />
+        <package android:name="com.waze" />
+    </queries>
+    -->
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+        </intent>
+    </queries>
 
     <application
         android:name=".MyApp"
@@ -42,7 +54,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
-
+        <activity
+            android:name=".tool.Android14Activity"
+            android:exported="false"
+            android:label="@string/title_activity_android14"
+            android:theme="@style/HomeTheme">
+            <intent-filter>
+                <action android:name="com.activity.action.android14" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -61,11 +82,7 @@
         <activity
             android:name=".tool.GoogleMapActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.image.RingCircleImageActivity"
@@ -142,8 +159,7 @@
             android:launchMode="singleTask" />
         <activity
             android:name=".tool.GoogleTopUpActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.image.XfermodesActivity"
             android:exported="true" />
@@ -197,8 +213,7 @@
         <activity android:name=".permission.PermissionActivity" />
         <activity
             android:name=".tool.location.GpsActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity android:name=".tool.image.ImageHandleActivity" />
         <activity
             android:name=".tool.image.ScreenPhotoActivity"
