--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation 'androidx.compose.material3:material3-android:1.2.0'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.activity:activity:1.8.0'
 
 
     // For Robolectric tests.
