--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,12 +55,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
+            android:name=".ui.RatingBarActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".tool.Android14Activity"
             android:exported="false"
             android:label="@string/title_activity_android14"
             android:theme="@style/HomeTheme">
             <intent-filter>
                 <action android:name="com.activity.action.android14" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -81,9 +91,7 @@
 
         <activity
             android:name=".tool.GoogleMapActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.image.RingCircleImageActivity"
             android:exported="true" />
@@ -113,24 +121,13 @@
             android:exported="true" />
         <activity
             android:name=".tool.shake.ShakeMeActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".tool.shake.ShakeActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.KeyBordActivity"
-            android:exported="true">
-
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".arch.recyclerview.multitype.visit.RecycleVisitActivity"
             android:exported="true" />
@@ -166,7 +163,7 @@
             android:launchMode="singleTask" />
         <activity
             android:name=".tool.GoogleTopUpActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.image.XfermodesActivity"
             android:exported="true" />
@@ -219,14 +216,11 @@
         <activity android:name=".tool.screenshot.ScreenShortActivity" />
         <activity android:name=".permission.PermissionActivity" />
         <activity
-            android:name=".compose.ComposeActivity05"
-            android:exported="true">
-
-        </activity>
+            android:name=".compose.ComposeActivity03"
+            android:exported="true"></activity>
         <activity
             android:name=".tool.location.GpsActivity"
             android:exported="true"></activity>
-
         <activity android:name=".tool.image.ImageHandleActivity" />
         <activity
             android:name=".tool.image.ScreenPhotoActivity"
