--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -136,11 +136,7 @@
             android:name=".hilt.dn.HiltMainActivity"
             android:exported="true">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.ActivityD"
@@ -241,6 +237,16 @@
         <activity
             android:name=".activity.activityresult.FirstResultActivity"
             android:exported="true" />
+
+
+        <activity android:name=".compose.server.ComposeRequestActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <provider
             android:name=".CameraProvider"
