--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,13 +41,14 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.kot'
 
     testOptions {
         unitTests {
