also have okhttp_dump project

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -175,7 +175,15 @@
         <activity android:name=".test.robolec.MyActivity" />
         <activity android:name=".viewgroup.ViewGroupActivity" />
         <activity android:name=".tool.glide.lifecycle.GlideActivity" />
-        <activity android:name=".mvvm.lifecycle.LifeCycleActivity" />
+        <activity
+            android:name=".mvvm.lifecycle.LifeCycleActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".mvvm.livedata.xiangxue.LiveData2Activity" />
         <activity android:name=".mvvm.livedata.xiangxue.LiveData1Activity" />
         <activity android:name=".mvvm.dongnao.viewmodel.ViewModelShareActivity" />
@@ -237,13 +245,10 @@
             android:exported="true" />
 
 
-        <activity android:name=".compose.server.ComposeRequestActivity"
+        <activity
+            android:name=".compose.server.ComposeRequestActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <provider
