--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3-android:1.2.0'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.activity:activity:1.8.0'
+    implementation 'androidx.activity:activity-ktx:1.6.0'
 
 
     // For Robolectric tests.
