--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,13 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.6.0'
 
 
+    implementation "androidx.work:work-runtime-ktx:2.8.1" // For WorkManager
+    implementation "androidx.activity:activity-compose:1.7.2" // For Compose activity
+    implementation "androidx.compose.ui:ui:1.5.2" // Replace with the latest Compose version
+    implementation "androidx.compose.material:material:1.5.2" // For Material Design components
+    implementation "androidx.compose.ui:ui-tooling-preview:1.5.2"
+
+
     // For Robolectric tests.
     testImplementation("com.google.dagger:hilt-android-testing:2.48")
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
