--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <!--
     <queries>
         <package android:name="com.google.android.apps.maps" />
@@ -53,7 +53,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/HomeTheme">
+        android:theme="@style/AppTheme">
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -98,7 +98,7 @@
             android:exported="true" />
         <activity
             android:name=".service.ForegroundActivity"
-            android:exported="true" >
+            android:exported="true">
 
         </activity>
         <activity
@@ -274,21 +274,29 @@
 
         <receiver android:name=".service.DeviceBroadcastReceiver" />
 
-        <service android:name=".service.DeviceService"
+        <service
+            android:name=".service.DeviceService"
             android:foregroundServiceType="dataSync" />
 
-        <activity android:name=".service.background.WorkManagerActivity" android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity
+            android:name=".service.background.WorkManagerActivity"
+            android:exported="true">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <service
             android:name="androidx.work.impl.background.systemjob.SystemJobService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
+        <activity
+            android:name="com.kot.storage.StorageActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
