--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'dagger.hilt.android.plugin'
 
 
 android {
-
+    compileSdkVersion 34
     buildFeatures {
         viewBinding = true
     }
