--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,6 @@ include ':androidUtil'
 //project(':androidUtil').projectDir = new File('../CasanubeHealth/androidUtil')
 //project(':lottie').projectDir = new File('../lottie-android/lottie')
 
-include ':Mine'
+//include ':Mine'
 rootProject.name = "ankotlin"
 
