--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,13 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), '../proguard-rules.pro'
+        }
+
+        debug{
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), '../proguard-rules.pro'
         }
     }
     compileOptions {
@@ -76,39 +81,45 @@ dependencies {
 
 
     // For Robolectric tests.
-    testImplementation("com.google.dagger:hilt-android-testing:2.48")
-    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
-    // ...with Kotlin.
-    kaptTest("com.google.dagger:hilt-android-compiler:2.48")
-    // ...with Java.
-    testAnnotationProcessor("com.google.dagger:hilt-android-compiler:2.48")
+//    testImplementation("com.google.dagger:hilt-android-testing:2.48")
+//    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+//    // ...with Kotlin.
+//    kaptTest("com.google.dagger:hilt-android-compiler:2.48")
+//    // ...with Java.
+//    testAnnotationProcessor("com.google.dagger:hilt-android-compiler:2.48")
+//
+//    // For instrumented tests.
+//    androidTestImplementation("com.google.dagger:hilt-android-testing:2.48")
+//    // ...with Kotlin.
+//    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.48")
+//    // ...with Java.
+//    androidTestAnnotationProcessor("com.google.dagger:hilt-android-compiler:2.48")
+//
+//    // Local Unit Tests
+//    testImplementation "junit:junit:4.13.2"
+//    testImplementation "com.google.truth:truth:1.1.3"
+//    androidTestImplementation "androidx.test:core:1.5.0"
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//
+//    //mockk
+//    testImplementation "io.mockk:mockk:1.12.2"
+//    androidTestImplementation "io.mockk:mockk-android:1.12.0"
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+//
+//    testImplementation "org.robolectric:robolectric:4.9"
+//    testImplementation 'org.hamcrest:hamcrest:2.2'
+//
+//    androidTestImplementation("androidx.test.ext:junit:1.1.5")
+//    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
+//    androidTestImplementation(platform("androidx.compose:compose-bom:2023.03.00"))
+//    androidTestImplementation("androidx.compose.ui:ui-test-junit4")
+//    testImplementation("junit:junit:4.13.2")
 
-    // For instrumented tests.
-    androidTestImplementation("com.google.dagger:hilt-android-testing:2.48")
-    // ...with Kotlin.
-    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.48")
-    // ...with Java.
-    androidTestAnnotationProcessor("com.google.dagger:hilt-android-compiler:2.48")
+//    debugImplementation("androidx.compose.ui:ui-tooling")
+//    debugImplementation("androidx.compose.ui:ui-test-manifest")
 
-    // Local Unit Tests
-    testImplementation "junit:junit:4.13.2"
-    testImplementation "com.google.truth:truth:1.1.3"
-    androidTestImplementation "androidx.test:core:1.5.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
-    //mockk
-    testImplementation "io.mockk:mockk:1.12.2"
-    androidTestImplementation "io.mockk:mockk-android:1.12.0"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    testImplementation "org.robolectric:robolectric:4.9"
-    testImplementation 'org.hamcrest:hamcrest:2.2'
-
-    androidTestImplementation("androidx.test.ext:junit:1.1.5")
-    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
-    androidTestImplementation(platform("androidx.compose:compose-bom:2023.03.00"))
-    androidTestImplementation("androidx.compose.ui:ui-test-junit4")
-
+    
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     implementation("com.alibaba:fastjson:1.1.71.android")
@@ -139,11 +150,6 @@ dependencies {
     implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.ui:ui-graphics")
     implementation("androidx.compose.ui:ui-tooling-preview")
-    testImplementation("junit:junit:4.13.2")
-
-
-    debugImplementation("androidx.compose.ui:ui-tooling")
-    debugImplementation("androidx.compose.ui:ui-test-manifest")
 
 
 }
