--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
-include ':app'
+//include ':app'
 include ':androidUtil'
 //project(':androidUtil').projectDir = new File('../CasanubeHealth/androidUtil')
 //project(':lottie').projectDir = new File('../lottie-android/lottie')
 
-//include ':Mine'
+include ':Mine'
 rootProject.name = "ankotlin"
 
