--- a/Mine/build.gradle
+++ b/Mine/build.gradle
@@ -77,14 +77,14 @@ dependencies {
     testImplementation 'androidx.test:core:1.5.0'
 
     // compose
-    androidTestImplementation 'androidx.test:core:1.5.0'
-    androidTestImplementation 'androidx.test:runner:1.6.0-alpha01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:' + rootProject.espressoVersion
-    androidTestImplementation 'com.google.truth:truth:' + rootProject.truthVersion
-    androidTestImplementation 'org.robolectric:annotations:' + rootProject.robolectricVersion
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+//    androidTestImplementation 'androidx.test:core:1.5.0'
+//    androidTestImplementation 'androidx.test:runner:1.6.0-alpha01'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:' + rootProject.espressoVersion
+//    androidTestImplementation 'com.google.truth:truth:' + rootProject.truthVersion
+//    androidTestImplementation 'org.robolectric:annotations:' + rootProject.robolectricVersion
+//    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+//    debugImplementation 'androidx.compose.ui:ui-tooling'
+//    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation platform('androidx.compose:compose-bom:2023.08.00')
     implementation 'androidx.compose.ui:ui'
