--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,5 @@ kapt.use.worker.api=false
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+org.gradle.jvmargs=-Xmx6144m
 
